private/public routes, landing css

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="Cachow Application"
       content="Welcome to the site where you can view all the menus of your favorite eateries. "
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
